--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "angular": "^1.4.9",
     "angular-animate": "^1.4.9",
     "angular-aria": "^1.4.9",
+    "angular-route": "^1.4.9",
     "angular-material": "^1.0.0"
   },
   "devDependencies": {
