--- a/back/package.json
+++ b/back/package.json
@@ -11,14 +11,14 @@
   "author": "EISTI--42 Collaboration <titouan.bion@gmail.com>",
   "license": "CC-BY-NC-SA-4.0",
   "dependencies": {
-    "express": "~4.13.3",
-    "sugar": "~1.4.1",
-    "socket.io": "~1.4.4",
-    "sqlite3": "~3.1.1",
-    "grunt": "~0.4.5",
-    "coffee-script": "~1.10.0",
     "body-parser": "~1.14.2",
-    "node-uuid": "~1.4.7"
+    "coffee-script": "~1.10.0",
+    "express": "~4.13.3",
+    "grunt": "~0.4.5",
+    "node-uuid": "~1.4.7",
+    "socket.io": "^1.4.5",
+    "sqlite3": "~3.1.1",
+    "sugar": "~1.4.1"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
