--- a/back/package.json
+++ b/back/package.json
@@ -1,31 +1,34 @@
 {
   "name": "gendloc-",
-  "version": "0.0.1",
-  "description": "Gendloc extension with WebRTC video",
+  "version": "1.0.0",
+  "description": "Backend of Gendloc extension with WebRTC video, photos, reflex cards",
   "main": "simple/src/simpleServer.js",
-  "private": true,
   "repository": {
     "type": "git",
     "url": "git@github.com:FunkySayu/GendLoc-.git"
   },
-  "author": "EISTI--42 Collaboration <titouan.bion@gmail.com>",
+  "author": "Axel Martin <funkysayu@gmail.com>",
+  "contributors": [
+    {
+      "name": "Titouan Bion",
+      "email": "titouan.bion@gmail.com",
+      "url": "https://github.com/ArchangelX360"
+    },
+    {
+      "name": "Damien Cassan",
+      "email": "damien.cassan@eisti.eu",
+      "url": "https://github.com/cassand"
+    },
+    {
+      "name": "Luc Charpentier",
+      "email": "kelu27@gmail.com",
+      "url": "https://github.com/kelu27"
+    }
+  ],
   "license": "CC-BY-NC-SA-4.0",
   "dependencies": {
-    "body-parser": "~1.14.2",
-    "coffee-script": "~1.10.0",
     "express": "~4.13.3",
-    "grunt": "~0.4.5",
-    "node-uuid": "~1.4.7",
     "socket.io": "^1.4.5",
-    "sqlite3": "~3.1.1",
-    "sugar": "~1.4.1"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-coffee": "~0.13.0",
-    "grunt-contrib-uglify": "~0.11.0",
-    "grunt-contrib-concat": "~0.5.1",
-    "grunt-contrib-cssmin": "~0.14.0",
-    "grunt-contrib-copy": "~0.8.2"
+    "sqlite3": "~3.1.1"
   }
 }
