--- a/front/package.json
+++ b/front/package.json
@@ -1,13 +1,24 @@
 {
   "name": "gendloc",
-  "private": true,
-  "version": "0.0.4",
-  "description": "A starter project for AngularJS Material",
-  "repository": "https://github.com/angular/material-start",
-  "licenses": [
+  "version": "1.0.0",
+  "description": "Frontend of Gendloc extension with WebRTC video, photos, reflex cards",
+  "repository": "https://github.com/FunkySayu/GendLoc-",
+  "author": "Axel Martin <funkysayu@gmail.com>",
+  "contributors": [
     {
-      "type": "MIT",
-      "url": "https://github.com/angular/material/blob/master/LICENSE"
+      "name": "Titouan Bion",
+      "email": "titouan.bion@gmail.com",
+      "url": "https://github.com/ArchangelX360"
+    },
+    {
+      "name": "Damien Cassan",
+      "email": "damien.cassan@eisti.eu",
+      "url": "https://github.com/cassand"
+    },
+    {
+      "name": "Luc Charpentier",
+      "email": "kelu27@gmail.com",
+      "url": "https://github.com/kelu27"
     }
   ],
   "dependencies": {
@@ -19,6 +30,7 @@
     "angular-route": "^1.5.0",
     "socket.io": "^1.4.5"
   },
+  "license": "CC-BY-NC-SA-4.0",
   "devDependencies": {
     "live-server": "^0.9.1"
   },
