--- a/back/package.json
+++ b/back/package.json
@@ -28,6 +28,7 @@
   "license": "CC-BY-NC-SA-4.0",
   "dependencies": {
     "express": "~4.13.3",
+    "multer": "^1.1.0",
     "socket.io": "^1.4.5",
     "sqlite3": "~3.1.1"
   }
