--- a/back/package.json
+++ b/back/package.json
@@ -27,8 +27,11 @@
   ],
   "license": "CC-BY-NC-SA-4.0",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "~4.13.3",
+    "filendir": "^1.0.0",
     "multer": "^1.1.0",
+    "path": "^0.12.7",
     "socket.io": "^1.4.5",
     "sqlite3": "~3.1.1"
   }
